<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:id="@+id/DetailGrid">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_gravity="center|bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvFIO"
                    android:id="@+id/contact_detail"/>
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:minLines="3"
                    android:gravity="top"
                    android:id="@+id/textFIO"
                    android:layout_toRightOf="@+id/contact_detail"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/textVParents"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Родители"/>
                <EditText
                    android:layout_gravity="top"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:minLines="3"
                    android:ems="10"
                    android:id="@+id/textParents"
                    android:gravity="top"
                    android:layout_toRightOf="@id/textVParents"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_gravity="top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Основной\nадрес"
                    android:id="@+id/textVMAddr"/>
                <EditText
                    android:layout_gravity="top"
                    android:gravity="top"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:minLines="3"
                    android:ems="10"
                    android:id="@+id/textMAddr"
                    android:layout_toRightOf="@id/textVMAddr"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/textVInfo"
                    android:layout_gravity="top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvInfo"/>
                <EditText
                    android:layout_gravity="top"
                    android:gravity="top"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:minLines="3"
                    android:ems="10"
                    android:id="@+id/textInfo"
                    android:layout_toRightOf="@id/textVInfo"/>
            </RelativeLayout>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chBoxStatusTextActive"
                android:id="@+id/chBoxStatus" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/textVLog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvLog"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"/>
            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/textVDolTen"
                    android:layout_gravity="top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvDolTen"/>
                <EditText
                    android:gravity="top"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textDolTen"
                    android:inputType="textMultiLine"
                    android:minLines="3"
                    android:layout_toRightOf="@id/textVDolTen"/>
            </RelativeLayout>



            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/textVNextDate"
                    android:layout_gravity="top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvNextDate"/>
                <EditText
                    android:gravity="top"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textNextDate"
                    android:inputType="textMultiLine"
                    android:minLines="3"
                    android:layout_toRightOf="@id/textVNextDate"/>
            </RelativeLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strbtnUpdate"
                android:drawableLeft="@drawable/ic_btnupdate_dark"
                android:id="@+id/btnUpdate"
                android:layout_gravity="center_horizontal"
                android:maxHeight="10sp" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/textVLastDate"
                    android:layout_gravity="top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvLastDate"/>
                <EditText
                    android:gravity="top"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textLastDate"
                    android:inputType="textMultiLine"
                    android:minLines="12"
                    android:layout_toRightOf="@id/textVLastDate"/>
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>


    </ScrollView>